tests/invalid/foreign_purity_mismatch.err_exp
foreign_purity_mismatch.m:010: In predicate `pure_with_impure'/1:
foreign_purity_mismatch.m:010:   purity error: predicate is impure.
foreign_purity_mismatch.m:010:   It must be declared `impure' or promised pure.
foreign_purity_mismatch.m:011: In predicate `pure_with_semipure'/1:
foreign_purity_mismatch.m:011:   purity error: predicate is semipure.
foreign_purity_mismatch.m:011:   It must be declared `semipure' or promised
foreign_purity_mismatch.m:011:   pure.
foreign_purity_mismatch.m:013: In predicate `semipure_with_impure'/1:
foreign_purity_mismatch.m:013:   purity error: predicate is impure.
foreign_purity_mismatch.m:013:   It must be declared `impure' or promised
foreign_purity_mismatch.m:013:   semipure.
foreign_purity_mismatch.m:024: Error: foreign clause for predicate
foreign_purity_mismatch.m:024:   `foreign_purity_mismatch.pure_with_impure'/1
foreign_purity_mismatch.m:024:   has purity impure but that predicate has been
foreign_purity_mismatch.m:024:   declared pure.
foreign_purity_mismatch.m:031: Error: foreign clause for predicate
foreign_purity_mismatch.m:031:   `foreign_purity_mismatch.pure_with_semipure'/1
foreign_purity_mismatch.m:031:   has purity semipure but that predicate has
foreign_purity_mismatch.m:031:   been declared pure.
foreign_purity_mismatch.m:038: Error: foreign clause for predicate
foreign_purity_mismatch.m:038:   `foreign_purity_mismatch.semipure_with_impure'/1
foreign_purity_mismatch.m:038:   has purity impure but that predicate has been
foreign_purity_mismatch.m:038:   declared semipure.
foreign_purity_mismatch.m:045: Error: foreign clause for predicate
foreign_purity_mismatch.m:045:   `foreign_purity_mismatch.semipure_with_pure'/1
foreign_purity_mismatch.m:045:   has purity pure but that predicate has been
foreign_purity_mismatch.m:045:   declared semipure.
foreign_purity_mismatch.m:052: Error: foreign clause for predicate
foreign_purity_mismatch.m:052:   `foreign_purity_mismatch.impure_with_pure'/1
foreign_purity_mismatch.m:052:   has purity pure but that predicate has been
foreign_purity_mismatch.m:052:   declared impure.
foreign_purity_mismatch.m:059: Error: foreign clause for predicate
foreign_purity_mismatch.m:059:   `foreign_purity_mismatch.impure_with_semipure'/1
foreign_purity_mismatch.m:059:   has purity semipure but that predicate has
foreign_purity_mismatch.m:059:   been declared impure.
